Aress7/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Bonus_Weighting__c</fullName>
        <inlineHelpText>Weighting used for installer bonuses.</inlineHelpText>
        <label>Bonus Weighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Product cost for iPro.</description>
        <inlineHelpText>Not the sale price, this is the manufacturing cost for iPro.</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Hours__c</fullName>
        <label>Labour Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labour__c</fullName>
        <label>Sub-Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Labour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sockets__c</fullName>
        <inlineHelpText>Number of Sockets on Unit</inlineHelpText>
        <label>Sockets</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>SKU__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Sockets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Delivery_Costs</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <label>Delivery Costs</label>
    </listViews>
    <listViews>
        <fullName>Solo_Units</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Solo Units</value>
        </filters>
        <label>Solo Units</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Twin_Units</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Twin Units</value>
        </filters>
        <label>Twin Units</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>